@@ -7,28 +7,28 @@ MEFA TODO LIST -- also a memo
 *** mefa4 ***
 < methods to add to >
 OK - dim
-OK - dimnames
+OK - dimnames, dimnames<-
 OK - xtab, xtab<-
 OK - samp, samp<-
 OK - taxa, taxa<-
-OK - [<-
+OK - [, [<-
 OK - coercion methods between S3 and S4 classes (went to mefa)
-OK - coercion between Xtab and Mefa
+OK - coercion between various classes and Mefa
 OK - aggregate -- no sparse implementation, use aggregate(as.mefa), ...)
      but that is sloooow. An implementation is ready in my Dropbox folder
      it is implemented as groupSums and groupMeans methods
 OK - show
 OK - test directory with example and performance comparison code
-
-- Xtab methods for [ and [<- (different siglists?), now returns dgCMatrix
-
+OK - Xtab methods for [ and [<- (different siglists?), now returns dgCMatrix
+     Xtab class removed, use dgCMatrix instead
+OK - join 2 Xtab, Mefa objects, inner/outer/left/right join operations
+     needs careful planning, but should be pretty straightforward
+     left join version is implemented as mbind in mefa4
+OK - add a vignette on performance comparisons, new classes and methods
+- write documentation (Rd)
 - print, summary (not sure what to do with these)
 - plot, image (see image plot for Matrix classes) - it is not urgent, image(as.mefa(x))
 ? set a class union for XtabMatrix and Mefa -- currently no need for it
 ? which operatons should affect @call? -- update all the time, or remove @call
 ? is there a need for call and update? -- I think no
 
-- join 2 Xtab, Mefa objects, inner/outer/left/right join operations
-     needs careful planning, but should be pretty straightforward
-
-- add a vignette on performance comparisons, new classes and methods
