@@ -3,8 +3,8 @@ exportClasses(Mefa, stcs, mefa, MefaMatrix, MefaDataFrame)
 exportMethods(xtab, samp, taxa, dim, dimnames, "dimnames<-",
     "xtab<-", "samp<-", "taxa<-", "[",
     groupSums, groupMeans,
-    show)
-importFrom(Matrix)
+    show, mbind)
+importFrom(Matrix, rBind, cBind)
 importClassesFrom(Matrix, dgCMatrix, CsparseMatrix,
     dsparseMatrix, generalMatrix, dMatrix,
     sparseMatrix, compMatrix, Matrix)
